--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -134,6 +134,10 @@
   left: 12px;
   display: block;
   margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .original-chekbox {
