--- a/css/main.css
+++ b/css/main.css
@@ -128,11 +128,6 @@ img {
   text-align: center;
 }
 
-.section-title {
-  font-size: 36px;
-  line-height: 1.166;
-}
-
 .header {
   display: flex;
   align-items: center;
@@ -346,6 +341,13 @@ img {
   left: 12px;
   display: block;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .rules-accept-container {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .original-chekbox {
@@ -800,13 +802,30 @@ img {
 }
 
 .team-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #f5f4fa;
 }
 
+@media screen and (min-width: 768px) {
+  .team-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .team-title {
-  padding-bottom: 50px;
+  padding-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.179;
+}
+
+@media screen and (min-width: 768px) {
+  .team-title {
+    padding-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.166;
+  }
 }
 
 .members-list .item {
@@ -816,8 +835,50 @@ img {
   background-color: #ffffff;
 }
 
-.members-list .item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 480px) {
+  .members-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .members-list .item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .members-list .item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+  .members-list .item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .members-list .item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .members-list .item {
+    width: calc((100% - 4 * 15px) / 2);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .members-list .item {
+    width: calc((100% - 8 * 15px) / 4);
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .members-list .item:nth-child(3) {
+    margin-bottom: 0px;
+  }
 }
 
 .member-foto {
@@ -840,12 +901,25 @@ img {
 }
 
 .clients-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .clients-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .clients-title {
+    margin-bottom: 50px;
+  }
 }
 
 .clients-icon {
@@ -857,7 +931,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -872,20 +945,55 @@ img {
   fill: #2196f3;
 }
 
-.clients-item:not(:last-child) {
-  margin-right: 30px;
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 479px) {
+  .clients-list .item {
+    width: calc((100% - 4 * 15px) / 2);
+  }
+  .clients-list .item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+  .clients-list .item:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .clients-list .item {
+    width: calc((100% - 6 * 15px) / 3);
+  }
+  .clients-list .item {
+    margin-right: 30px;
+  }
+  .clients-list .item:nth-child(3n + 3) {
+    margin-right: 0px;
+  }
+  .clients-list .item:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list .item {
+    width: calc((100% - 12 * 15px) / 6);
+  }
+  .clients-list .item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  height: 252px;
   background-color: #2f303a;
 }
 
 .footer-container {
-  position: relative;
-  display: flex;
+  text-align: center;
 }
 
 .footer-logo {
