--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,9 +1,16 @@
 .clients-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 50px;
+  @media screen and (min-width: 768px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .clients-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 50px;
+  }
 }
 .clients-icon {
   fill: $icon-cl;
@@ -13,7 +20,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 90px;
   border: 1px solid $icon-cl;
   border-radius: 4px;
@@ -26,6 +32,40 @@
     }
   }
 }
-.clients-item:not(:last-child) {
-  margin-right: 30px;
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  @media screen and (max-width: 479px) {
+    .item {
+      width: calc((100% - 4 * 15px) / 2);
+    }
+    .item:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+    .item:nth-child(-n + 4) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    .item {
+      width: calc((100% - 6 * 15px) / 3);
+    }
+    .item {
+      margin-right: 30px;
+    }
+    .item:nth-child(3n + 3) {
+      margin-right: 0px;
+    }
+    .item:nth-child(-n + 3) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .item {
+      width: calc((100% - 12 * 15px) / 6);
+    }
+    .item:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
