--- a/sass/layouts/_members.scss
+++ b/sass/layouts/_members.scss
@@ -1,10 +1,21 @@
 .team-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: $lite-bg;
+  @media screen and (min-width: 768px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .team-title {
-  padding-bottom: 50px;
+  padding-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.179;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.166;
+  }
 }
 .members-list {
   .item {
@@ -16,8 +27,41 @@
   }
 }
 .members-list {
-  .item:not(:last-child) {
-    margin-right: 30px;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (max-width: 479px) {
+    .item:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    .item:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+    .item:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .item:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+  .item {
+    @media screen and (min-width: 480px) {
+      width: calc((100% - 4 * 15px) / 2);
+    }
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 8 * 15px) / 4);
+    }
+  }
+
+  @media screen and (min-width: 480px) {
+    .item:nth-child(3) {
+      margin-bottom: 0px;
+    }
   }
 }
 .member-foto {
