--- a/sass/components/_social-icons.scss
+++ b/sass/components/_social-icons.scss
@@ -47,7 +47,14 @@
 .social-container {
   display: flex;
   flex-direction: column;
-  margin-right: 93px;
+
+  margin-bottom: 60px;
+  @media screen and (min-width: 480px) {
+    display: inline-block;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 93px;
+  }
 }
 .social-icon.footer-social-icon {
   fill: $white;
