--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,4 +1,5 @@
 .subscribe-title {
+  margin-bottom: 20px;
   left: 0px;
   top: 0px;
   margin-bottom: 20px;
@@ -6,28 +7,32 @@
   line-height: 1.25;
   text-transform: uppercase;
   color: $white;
-  text-align: start;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
 }
-.subscride-form {
-  position: absolute;
-  right: 15px;
+@media screen and (min-width: 768px) {
+  .subscride-form {
+    display: inline-flex;
+    flex-direction: column;
+  }
 }
+
 .subscribe-container {
-  position: relative;
-  width: 570px;
-  height: 86px;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 .subscribe-btn {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
   width: 200px;
   height: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 29px;
   padding-right: 28px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   background-color: $accent-cl;
   font-size: 16px;
@@ -35,12 +40,19 @@
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: $white;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 768px) {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
 .subscribe-container {
   input {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
+    margin-bottom: 20px;
     width: 358px;
     height: 50px;
     padding: 15px 16px;
@@ -51,8 +63,11 @@
     border-radius: 4px;
     font-size: 16px;
     line-height: 1.25;
-
     color: rgba(255, 255, 255, 0.6);
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+      margin-right: 12px;
+    }
   }
 }
 
