--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,14 +1,36 @@
 .footer {
+  width: 100%;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $dark-bg;
+  @media screen and (min-width: 480px) {
+    min-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    min-width: 1200px;
+  }
 }
 .footer-container {
   text-align: center;
-  // position: relative;
-  // display: flex;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    justify-content: space-between;
+  }
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+    flex-wrap: nowrap;
+  }
 }
-
+.contacts-container {
+  margin-bottom: 60px;
+  @media screen and (min-width: 480px) {
+    display: inline-block;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 70px;
+    text-align: start;
+  }
+}
 .footer-logo {
   display: block;
   color: $white;
@@ -25,8 +47,11 @@
   font-size: 14px;
   line-height: 1.142;
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
   color: $white;
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
 }
 .footer-contacts-links {
   font-weight: 400;
