--- a/css/main.css
+++ b/css/main.css
@@ -538,7 +538,7 @@ img {
 
 .subscribe-container input {
   margin-bottom: 20px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding: 15px 16px;
   background-color: rgba(33, 150, 243, 0);
@@ -551,10 +551,17 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (min-width: 480px) {
+  .subscribe-container input {
+    max-width: 450px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .subscribe-container input {
     margin-bottom: 0px;
     margin-right: 12px;
+    width: 358px;
   }
 }
 
@@ -849,6 +856,7 @@ img {
   .team-section {
     padding-top: 94px;
     padding-bottom: 94px;
+    min-width: 1200px;
   }
 }
 
