--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -346,7 +346,7 @@ img {
 
 .subscribe-container input {
   margin-bottom: 20px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding: 15px 16px;
   background-color: rgba(33, 150, 243, 0);
@@ -359,10 +359,17 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (min-width: 480px) {
+  .subscribe-container input {
+    max-width: 450px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .subscribe-container input {
     margin-bottom: 0px;
     margin-right: 12px;
+    width: 358px;
   }
 }
 
