--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -53,7 +53,7 @@
 .subscribe-container {
   input {
     margin-bottom: 20px;
-    width: 358px;
+    width: 100%;
     height: 50px;
     padding: 15px 16px;
     background-color: rgba(33, 150, 243, 0);
@@ -64,9 +64,13 @@
     font-size: 16px;
     line-height: 1.25;
     color: rgba(255, 255, 255, 0.6);
+    @media screen and (min-width: 480px) {
+      max-width: 450px;
+    }
     @media screen and (min-width: 768px) {
       margin-bottom: 0px;
       margin-right: 12px;
+      width: 358px;
     }
   }
 }
