--- a/sass/layouts/_members.scss
+++ b/sass/layouts/_members.scss
@@ -5,6 +5,7 @@
   @media screen and (min-width: 768px) {
     padding-top: 94px;
     padding-bottom: 94px;
+    min-width: 1200px;
   }
 }
 .team-title {
