--- a/sass/layouts/_members.scss
+++ b/sass/layouts/_members.scss
@@ -66,7 +66,8 @@
   }
 }
 .member-foto {
-  padding-bottom: 30px;
+  margin-bottom: 30px;
+  width: 100%;
 }
 .member-name {
   padding-bottom: 10px;
