--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,9 +171,22 @@ img {
 
 .filter {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+}
+
+.filter .item:nth-child(-n + 3) {
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .filter {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+  .filter .item:nth-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .filter .item:not(:last-child) {
