--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -20,9 +20,18 @@
 }
 .filter {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+  .item:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+  @media screen and (min-width: 480px) {
+    flex-wrap: nowrap;
+    justify-content: center;
+    .item:nth-child(-n + 3) {
+      margin-bottom: 0px;
+    }
+  }
 }
 .filter {
   .item:not(:last-child) {
