--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -128,12 +128,6 @@ img {
   text-align: center;
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  height: 80px;
-}
-
 .logo {
   font-family: Raleway, sans-serif;
   font-style: normal;
@@ -391,27 +385,79 @@ img {
   margin-left: 10px;
 }
 
+.header {
+  position: relative;
+}
+
 .header-logo {
   padding-top: 24px;
   padding-bottom: 25px;
-  margin-right: 93px;
+  margin-right: 88px;
   color: #000000;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+@media screen and (min-width: 768px) {
+  .header-logo {
+    margin-right: 93px;
+  }
 }
 
 .navigation {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0px;
+  width: 100%;
+  background-color: #ffffff;
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  z-index: 101;
+}
+
+.menu-container.is-open {
+  display: block;
+}
+
+.menu-btn .icon-close {
+  display: none;
+}
+
+.menu-btn:hover .icon-menu {
+  fill: #2196f3;
+}
+
+.menu-btn:hover .icon-close {
+  fill: #2196f3;
+}
+
+.menu-btn.is-open .icon-close {
+  display: block;
+}
+
+.menu-btn.is-open .icon-menu {
+  display: none;
+}
+
+.menu {
+  text-align: center;
+  display: inline-block;
+  margin-bottom: 60px;
 }
 
 .menu .item {
   position: relative;
-  padding-top: 32px;
-  padding-bottom: 25px;
 }
 
 .menu .item:not(:last-child) {
-  margin-right: 50px;
+  margin-bottom: 40px;
 }
 
 .link.active-page {
@@ -421,7 +467,7 @@ img {
 .active-page::after {
   content: '';
   position: absolute;
-  bottom: 0px;
+  bottom: -8px;
   display: flex;
   align-items: flex-end;
   height: 4px;
@@ -431,36 +477,45 @@ img {
 }
 
 .header-contacts {
-  display: flex;
-  margin-left: auto;
+  display: block;
 }
 
-.header-contacts .link {
-  display: inline-flex;
-  align-items: center;
+.header-contacts .item {
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.166;
 }
 
 .header-contacts .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.icon-link {
-  display: flex;
-  align-items: center;
+  margin-bottom: 16px;
 }
 
 .mail-icon {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
+  width: 14px;
+  height: 10px;
+  margin-right: 8px;
   fill: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .mail-icon {
+    width: 16px;
+    height: 12px;
+  }
 }
 
 .phone-icon {
   width: 10px;
-  height: 16px;
-  margin-right: 10px;
+  height: 14px;
+  margin-right: 8px;
   fill: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .phone-icon {
+    width: 10px;
+    height: 16px;
+  }
 }
 
 .portfolio-section {
