--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -386,13 +386,25 @@ img {
 }
 
 .header {
-  position: relative;
+  padding: 10px 15px;
+  height: 60px;
+}
+
+@media screen and (max-width: 479px) {
+  .header {
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+    height: 80px;
+  }
 }
 
 .header-logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 88px;
   color: #000000;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -409,21 +421,35 @@ img {
   justify-content: space-between;
 }
 
-.menu-container {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0px;
-  width: 100%;
-  background-color: #ffffff;
-  text-align: center;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  z-index: 101;
+@media screen and (max-width: 479px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0px;
+    width: 100%;
+    background-color: #ffffff;
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    z-index: 101;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
 }
 
-.menu-container.is-open {
-  display: block;
+@media screen and (min-width: 480px) {
+  .menu-container {
+    display: flex;
+    width: 100%;
+  }
+}
+
+.menu-btn {
+  padding: 0px;
+  width: 40px;
+  height: 40px;
 }
 
 .menu-btn .icon-close {
@@ -436,6 +462,12 @@ img {
 
 .menu-btn:hover .icon-close {
   fill: #2196f3;
+}
+
+@media screen and (min-width: 480px) {
+  .menu-btn {
+    display: none;
+  }
 }
 
 .menu-btn.is-open .icon-close {
@@ -460,6 +492,24 @@ img {
   margin-bottom: 40px;
 }
 
+@media screen and (min-width: 480px) {
+  .menu .item:not(:last-child) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .menu {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0px;
+    margin-left: auto;
+  }
+  .menu .item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
 .link.active-page {
   color: #2196f3;
 }
@@ -480,14 +530,33 @@ img {
   display: block;
 }
 
+@media screen and (min-width: 480px) {
+  .header-contacts {
+    margin-left: auto;
+  }
+}
+
 .header-contacts .item {
   text-align: center;
   font-size: 18px;
   line-height: 1.166;
 }
 
+@media screen and (min-width: 480px) {
+  .header-contacts .item {
+    font-size: 12px;
+    text-align: start;
+  }
+}
+
 .header-contacts .item:not(:last-child) {
   margin-bottom: 16px;
+}
+
+@media screen and (min-width: 480px) {
+  .header-contacts .item:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .mail-icon {
