--- a/css/main.css
+++ b/css/main.css
@@ -376,6 +376,13 @@ img {
   background-repeat: no-repeat;
 }
 
+@media screen and (min-width: 768px) {
+  .checkbox-icon {
+    left: 0px;
+    top: 4px;
+  }
+}
+
 .original-chekbox:checked + .checkbox-icon {
   background-color: #2196f3;
   background-image: url(../../images/svg/checked.svg);
@@ -596,6 +603,13 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+
 .header-logo {
   color: #000000;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -702,6 +716,12 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .menu {
+    margin-left: 0px;
+  }
+}
+
 .link.active-page {
   color: #2196f3;
 }
@@ -748,6 +768,27 @@ img {
 @media screen and (min-width: 480px) {
   .header-contacts .item:not(:last-child) {
     margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts .item:not(:last-child) {
+    margin-bottom: 0px;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .icon-link {
+    display: flex;
+    align-items: center;
   }
 }
 
