--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -404,6 +404,13 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+
 .header-logo {
   color: #000000;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -510,6 +517,12 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .menu {
+    margin-left: 0px;
+  }
+}
+
 .link.active-page {
   color: #2196f3;
 }
@@ -556,6 +569,27 @@ img {
 @media screen and (min-width: 480px) {
   .header-contacts .item:not(:last-child) {
     margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts .item:not(:last-child) {
+    margin-bottom: 0px;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .icon-link {
+    display: flex;
+    align-items: center;
   }
 }
 
