--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -9,6 +9,10 @@
     padding-bottom: 21px;
     height: 80px;
   }
+  @media screen and (min-width: 768px) {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 .header-logo {
   color: #000000;
@@ -91,10 +95,12 @@
     align-items: center;
     margin-bottom: 0px;
     margin-left: auto;
-
     .item:not(:last-child) {
       margin-right: 50px;
     }
+  }
+  @media screen and (min-width: 768px) {
+    margin-left: 0px;
   }
 }
 
@@ -132,9 +138,22 @@
     @media screen and (min-width: 480px) {
       margin-bottom: 10px;
     }
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+      margin-right: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
   }
 }
-
+.icon-link {
+  @media screen and (min-width: 480px) {
+    display: flex;
+    align-items: center;
+  }
+}
 .mail-icon {
   width: 14px;
   height: 10px;
