--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -8,7 +8,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/mobile/mobile-hero.jpg);
+    url(../images/mobile/mobile-hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -21,7 +21,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/mobile/mobile-hero@2.jpg);
+      url(../images/mobile/mobile-hero@2.jpg);
   }
 }
 @media screen and (min-width: 480px) {
@@ -31,7 +31,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/tablet/tablet-hero.jpg);
+      url(../images/tablet/tablet-hero.jpg);
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -42,7 +42,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/tablet/tablet-hero@2x.jpg);
+        url(../images/tablet/tablet-hero@2x.jpg);
     }
   }
 }
@@ -54,7 +54,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/desktop/desktop-hero.jpg);
+      url(../images/desktop/desktop-hero.jpg);
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -65,7 +65,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/desktop/desktop-hero@2x.jpg);
+        url(../images/desktop/desktop-hero@2x.jpg);
     }
   }
 }
