--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -71,21 +71,21 @@
 }
 .benefits-list {
   .antena-icon:before {
-    background-image: url(./images/svg/antenna.svg);
+    background-image: url(../images/svg/antenna.svg);
   }
 }
 .benefits-list {
   .clock-icon::before {
-    background-image: url(./images/svg/clock.svg);
+    background-image: url(../images/svg/clock.svg);
   }
 }
 .benefits-list {
   .diagram-icon::before {
-    background-image: url(./images/svg/diagram.svg);
+    background-image: url(../images/svg/diagram.svg);
   }
 }
 .benefits-list {
   .astronaut-icon::before {
-    background-image: url(./images/svg/astronaut.svg);
+    background-image: url(../images/svg/astronaut.svg);
   }
 }
