--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,32 +1,26 @@
 .footer {
-  width: 100%;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $dark-bg;
-  @media screen and (min-width: 480px) {
-    min-width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    min-width: 1200px;
-  }
 }
 .footer-container {
   text-align: center;
-  @media screen and (min-width: 480px) {
-    display: flex;
-    justify-content: space-between;
-  }
   @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
     display: inline-flex;
     flex-wrap: nowrap;
   }
 }
 .contacts-container {
   margin-bottom: 60px;
-  @media screen and (min-width: 480px) {
-    display: inline-block;
-  }
   @media screen and (min-width: 768px) {
+    display: inline-block;
+    margin-right: 165px;
+  }
+  @media screen and (min-width: 1200px) {
     margin-right: 70px;
     text-align: start;
   }
@@ -49,7 +43,7 @@
   text-transform: uppercase;
   text-align: center;
   color: $white;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     text-align: start;
   }
 }
