--- a/css/main.css
+++ b/css/main.css
@@ -69,12 +69,6 @@ textarea {
   resize: none;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
 .container {
   width: 100%;
   margin-right: auto;
@@ -85,11 +79,17 @@ img {
 
 @media screen and (min-width: 480px) {
   .container {
-    min-width: 480px;
+    width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
   }
@@ -173,7 +173,7 @@ img {
   margin-bottom: 15px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .filter {
     flex-wrap: nowrap;
     justify-content: center;
@@ -235,17 +235,14 @@ img {
 @media screen and (min-width: 480px) {
   .modal {
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    right: 50%;
+    transform: translateX(-50%);
     width: 450px;
   }
 }
 
-@media screen and (min-width: 780px) {
+@media screen and (min-width: 1200px) {
   .modal {
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     width: 528px;
   }
 }
@@ -350,7 +347,7 @@ img {
   margin-bottom: 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .rules-accept-container {
     font-size: 14px;
     line-height: 1.71;
@@ -376,7 +373,7 @@ img {
   background-repeat: no-repeat;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .checkbox-icon {
     left: 0px;
     top: 4px;
@@ -457,13 +454,13 @@ img {
   margin-bottom: 60px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .social-container {
     display: inline-block;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .social-container {
     margin-right: 93px;
   }
@@ -495,13 +492,13 @@ img {
   text-align: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscribe-title {
     text-align: start;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscride-form {
     display: inline-flex;
     flex-direction: column;
@@ -512,7 +509,7 @@ img {
   text-align: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscribe-container {
     display: flex;
   }
@@ -535,7 +532,7 @@ img {
   color: #ffffff;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .subscribe-btn {
     display: flex;
     margin-left: auto;
@@ -543,7 +540,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscribe-btn {
     margin-left: 0px;
     margin-right: 0px;
@@ -565,13 +562,13 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .subscribe-container input {
     max-width: 450px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscribe-container input {
     margin-bottom: 0px;
     margin-right: 12px;
@@ -589,13 +586,13 @@ img {
   height: 60px;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .header {
     position: relative;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .header {
     padding-top: 21px;
     padding-bottom: 21px;
@@ -603,7 +600,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .header {
     padding-top: 24px;
     padding-bottom: 24px;
@@ -615,7 +612,7 @@ img {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .header-logo {
     margin-right: 93px;
   }
@@ -627,7 +624,7 @@ img {
   justify-content: space-between;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .menu-container {
     display: none;
     position: absolute;
@@ -645,7 +642,7 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .menu-container {
     display: flex;
     width: 100%;
@@ -670,7 +667,7 @@ img {
   fill: #2196f3;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .menu-btn {
     display: none;
   }
@@ -698,13 +695,13 @@ img {
   margin-bottom: 40px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .menu .item:not(:last-child) {
     margin-bottom: 0px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .menu {
     display: flex;
     align-items: center;
@@ -716,7 +713,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .menu {
     margin-left: 0px;
   }
@@ -742,7 +739,7 @@ img {
   display: block;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .header-contacts {
     margin-left: auto;
   }
@@ -754,7 +751,7 @@ img {
   line-height: 1.166;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .header-contacts .item {
     font-size: 12px;
     text-align: start;
@@ -765,27 +762,27 @@ img {
   margin-bottom: 16px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .header-contacts .item:not(:last-child) {
     margin-bottom: 10px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .header-contacts .item:not(:last-child) {
     margin-bottom: 0px;
     margin-right: 30px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .header-contacts {
     display: flex;
     align-items: center;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .icon-link {
     display: flex;
     align-items: center;
@@ -799,7 +796,7 @@ img {
   fill: currentColor;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .mail-icon {
     width: 16px;
     height: 12px;
@@ -813,7 +810,7 @@ img {
   fill: currentColor;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .phone-icon {
     width: 10px;
     height: 16px;
@@ -821,6 +818,7 @@ img {
 }
 
 .hero-section {
+  width: 100%;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
@@ -836,26 +834,28 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .hero-section {
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/tablet-hero.jpg);
   }
 }
 
-@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero-section {
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/tablet-hero@2x.jpg);
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero-section {
-    min-width: 1200px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-position: center;
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/desktop-hero.jpg);
   }
 }
 
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero-section {
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/desktop-hero@2x.jpg);
   }
@@ -871,7 +871,7 @@ img {
   color: #ffffff;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .page-title {
     font-size: 44px;
     line-height: 1.36;
@@ -883,7 +883,7 @@ img {
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .benefits-section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -897,19 +897,19 @@ img {
   text-align: center;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .benefits-title {
     text-align: left;
   }
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .benefits-list .item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits-list .item:nth-child(2n + 1) {
     margin-right: 30px;
   }
@@ -918,31 +918,31 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .benefits-list .item:not(:last-child) {
     margin-right: 30px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .benefits-list .item {
     width: calc((100% - 1 * 30px) / 2);
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .benefits-list .item {
     width: calc((100% - 3 * 30px) / 4);
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .benefits-list .item:nth-child(3) {
     margin-bottom: 0px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .benefits-list {
     display: flex;
     flex-wrap: wrap;
@@ -980,7 +980,7 @@ img {
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .duty-section {
     display: block;
   }
@@ -1030,7 +1030,7 @@ img {
   background-color: #f5f4fa;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .team-section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -1044,7 +1044,7 @@ img {
   line-height: 1.179;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .team-title {
     padding-bottom: 50px;
     font-size: 36px;
@@ -1059,20 +1059,20 @@ img {
   background-color: #ffffff;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .members-list {
     display: flex;
     flex-wrap: wrap;
   }
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .members-list .item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .members-list .item:nth-child(2n + 1) {
     margin-right: 30px;
   }
@@ -1081,25 +1081,25 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .members-list .item:not(:last-child) {
     margin-right: 30px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .members-list .item {
     width: calc((100% - 1 * 30px) / 2);
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .members-list .item {
     width: calc((100% - 3 * 30px) / 4);
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .members-list .item:nth-child(3) {
     margin-bottom: 0px;
   }
@@ -1130,7 +1130,7 @@ img {
   padding-bottom: 50px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .clients-section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -1141,7 +1141,7 @@ img {
   margin-bottom: 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .clients-title {
     margin-bottom: 50px;
   }
@@ -1175,7 +1175,7 @@ img {
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .clients-list .item {
     width: calc((100% - 1 * 30px) / 2);
   }
@@ -1187,7 +1187,7 @@ img {
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients-list .item {
     width: calc((100% - 2 * 30px) / 3);
   }
@@ -1202,7 +1202,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .clients-list .item {
     width: calc((100% - 5 * 30px) / 6);
   }
@@ -1212,36 +1212,23 @@ img {
 }
 
 .footer {
-  width: 100%;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2f303a;
-}
-
-@media screen and (min-width: 480px) {
-  .footer {
-    min-width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer {
-    min-width: 1200px;
-  }
 }
 
 .footer-container {
   text-align: center;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .footer-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .footer-container {
     display: inline-flex;
     flex-wrap: nowrap;
@@ -1252,13 +1239,14 @@ img {
   margin-bottom: 60px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .contacts-container {
     display: inline-block;
+    margin-right: 165px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .contacts-container {
     margin-right: 70px;
     text-align: start;
@@ -1287,7 +1275,7 @@ img {
   color: #ffffff;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .connect {
     text-align: start;
   }
