--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -31,11 +31,7 @@ body {
 textarea {
   resize: none;
 }
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
+
 .container {
   width: 100%;
   margin-right: auto;
@@ -44,9 +40,12 @@ img {
   padding-left: 15px;
 
   @media screen and (min-width: 480px) {
-    min-width: 480px;
+    width: 480px;
   }
   @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
     width: 1200px;
   }
 }
