--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,4 +1,5 @@
 .hero-section {
+  width: 100%;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
@@ -10,6 +11,7 @@
     ),
     url(../images/mobile/mobile-hero.jpg);
   background-repeat: no-repeat;
+
   background-size: cover;
 }
 @media screen and (min-device-pixel-ratio: 2),
@@ -24,7 +26,7 @@
       url(../images/mobile/mobile-hero@2.jpg);
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .hero-section {
     background-image: linear-gradient(
         to bottom,
@@ -46,9 +48,11 @@
     }
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero-section {
-    min-width: 1200px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-position: center;
     background-image: linear-gradient(
         to bottom,
         rgba(47, 48, 58, 0.4),
@@ -78,7 +82,7 @@
   text-transform: uppercase;
   color: $white;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     font-size: 44px;
     line-height: 1.36;
   }
