--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -2,12 +2,12 @@
   border-top: 1px solid #ececec;
   padding-top: 60px;
   padding-bottom: 60px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -18,7 +18,7 @@
     margin-bottom: 30px;
   }
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     .item {
       width: calc((100% - 1 * 30px) / 2);
     }
@@ -26,7 +26,7 @@
       margin-right: 30px;
     }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     .item {
       width: calc((100% - 2 * 30px) / 3);
       margin-right: 30px;
@@ -56,6 +56,7 @@
 }
 .thumb {
   width: 100%;
+
   position: relative;
   overflow: hidden;
 }
@@ -77,9 +78,7 @@
 }
 
 .portfolio-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
