--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -78,7 +78,6 @@
 }
 .menu {
   text-align: center;
-  display: inline-block;
   margin-bottom: 60px;
 
   .item {
@@ -105,18 +104,21 @@
 }
 
 .link.active-page {
+  position: relative;
   color: $accent-cl;
 }
 .active-page::after {
   content: '';
   position: absolute;
+  left: 0px;
   bottom: -8px;
-  display: flex;
-  align-items: flex-end;
   height: 4px;
   width: 100%;
   border-radius: 2px;
   background-color: $accent-cl;
+  @media screen and (min-width: 768px) {
+    bottom: -32px;
+  }
 }
 
 .header-contacts {
