--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -764,6 +764,7 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .contacts-container {
+    margin-bottom: 0px;
     margin-right: 70px;
     text-align: start;
   }
