--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -9,6 +9,7 @@
 
 .benefits-title {
   margin-bottom: 10px;
+  font-size: inherit;
   line-height: 1.143;
   text-transform: uppercase;
   text-align: center;
@@ -62,6 +63,7 @@
   .item::before {
     content: '';
     display: block;
+    margin-bottom: 30px;
     width: 100%;
     height: 120px;
     background-repeat: no-repeat;
