--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -8,8 +8,12 @@
 }
 .clients-title {
   margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.179;
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.166;
   }
 }
 .clients-icon {
