--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -21,6 +21,7 @@
     margin-right: 165px;
   }
   @media screen and (min-width: 1200px) {
+    margin-bottom: 0px;
     margin-right: 70px;
     text-align: start;
   }
