--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -92,3 +92,8 @@ textarea {
 .logo__part {
   color: $accent-cl;
 }
+@media screen and (min-width: 1200px) {
+  .flex-box {
+    display: flex;
+  }
+}
