--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,6 +1,10 @@
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 72px;
+    padding-bottom: 72px;
+  }
   background-color: $dark-bg;
 }
 .footer-container {
